Submit button actualizado

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   
             <div class="d-flex justify-content-end">
               <button class="btn btn-secondary me-2" type="reset">Cancelar</button>
-              <button class="btn btn-primary" id="enviarFormulario" type="button">Enviar</button>
+              <button class="btn btn-primary" id="enviarFormulario" type="submit" value="submit">Enviar</button>
             </div>
           </form>
   
